Added workspace lib

--- a/WorkSpacesEJB/nbproject/project.properties
+++ b/WorkSpacesEJB/nbproject/project.properties
@@ -35,7 +35,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=WorkSpacesEJB.jar
-javac.classpath=
+jars.in.ejbjar=false
+javac.classpath=\
+    ${reference.workspacesLib.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
@@ -63,6 +65,8 @@ javadoc.windowtitle=
 meta.inf=${source.root}/conf
 meta.inf.excludes=sun-cmp-mappings.xml
 platform.active=default_platform
+project.workspacesLib=../workspacesLib
+reference.workspacesLib.jar=${project.workspacesLib}/dist/workspacesLib.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
