--- a/WorkSpacesEJB/nbproject/project.properties
+++ b/WorkSpacesEJB/nbproject/project.properties
@@ -22,6 +22,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.gson-2.3.1.jar=/Users/jacksonrkj/Documents/CIT 460/cms/jsonLibraies/gson-2.3.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -37,7 +38,8 @@ jar.compress=false
 jar.name=WorkSpacesEJB.jar
 jars.in.ejbjar=false
 javac.classpath=\
-    ${reference.workspacesLib.jar}
+    ${reference.workspacesLib.jar}:\
+    ${file.reference.gson-2.3.1.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
@@ -48,7 +50,8 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
