--- a/WorkSpacesEJB/nbproject/project.properties
+++ b/WorkSpacesEJB/nbproject/project.properties
@@ -22,7 +22,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.gson-2.3.1.jar=/Users/jacksonrkj/Documents/CIT 460/cms/jsonLibraies/gson-2.3.1.jar
+file.reference.gson-2.3.1.jar=gson-2.3.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
