--- a/WorkSpacesEJB/nbproject/project.properties
+++ b/WorkSpacesEJB/nbproject/project.properties
@@ -22,7 +22,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.gson-2.3.1.jar=gson-2.3.1.jar
+file.reference.gson-2.3.1.jar=../gson-2.3.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -39,8 +39,7 @@ jar.name=WorkSpacesEJB.jar
 jars.in.ejbjar=false
 javac.classpath=\
     ${reference.workspacesLib.jar}:\
-    ${file.reference.gson-2.3.1.jar}:\
-    ${reference.workspacesLib-1.jar}
+    ${file.reference.gson-2.3.1.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
@@ -70,8 +69,6 @@ meta.inf=${source.root}/conf
 meta.inf.excludes=sun-cmp-mappings.xml
 platform.active=default_platform
 project.workspacesLib=../workspacesLib
-project.workspacesLib-1=../../workspaces/workspacesLib
-reference.workspacesLib-1.jar=${project.workspacesLib-1}/dist/workspacesLib.jar
 reference.workspacesLib.jar=${project.workspacesLib}/dist/workspacesLib.jar
 resource.dir=setup
 run.test.classpath=\
