--- a/WorkSpacesEJB/nbproject/project.properties
+++ b/WorkSpacesEJB/nbproject/project.properties
@@ -22,7 +22,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.gson-2.3.1.jar=../gson-2.3.1.jar
+file.reference.qc_json.jar=/Users/jacksonrkj/NetBeansProjects/workspaces/qc_json.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -39,7 +39,7 @@ jar.name=WorkSpacesEJB.jar
 jars.in.ejbjar=false
 javac.classpath=\
     ${reference.workspacesLib.jar}:\
-    ${file.reference.gson-2.3.1.jar}
+    ${file.reference.qc_json.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
