--- a/workspaces/nbproject/project.properties
+++ b/workspaces/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.qc_json.jar=/Users/jacksonrkj/NetBeansProjects/workspaces/qc_json.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +42,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.workspacesLib.jar}:\
+    ${file.reference.qc_json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -70,6 +73,8 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.workspacesLib=../../workspaces/workspacesLib
+reference.workspacesLib.jar=${project.workspacesLib}/dist/workspacesLib.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
@@ -79,7 +84,7 @@ run.test.classpath=\
 runmain.jvmargs=
 source.encoding=UTF-8
 source.root=src
-src.dir=${source.root}/java
+src.java.dir=src/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
