3/25/2015 - Fixed Login and DocumentFacade

--- a/WorkSpacesEJB/nbproject/project.properties
+++ b/WorkSpacesEJB/nbproject/project.properties
@@ -36,7 +36,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=WorkSpacesEJB.jar
-jars.in.ejbjar=false
+jars.in.ejbjar=true
 javac.classpath=\
     ${reference.workspacesLib.jar}:\
     ${file.reference.qc_json.jar}
