--- a/WorkSpacesEJB/nbproject/project.properties
+++ b/WorkSpacesEJB/nbproject/project.properties
@@ -22,7 +22,6 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.qc_json.jar=/Users/jacksonrkj/NetBeansProjects/workspaces/qc_json.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -38,8 +37,7 @@ jar.compress=false
 jar.name=WorkSpacesEJB.jar
 jars.in.ejbjar=true
 javac.classpath=\
-    ${reference.workspacesLib.jar}:\
-    ${file.reference.qc_json.jar}
+    ${reference.workspacesLib.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
