--- a/workspaces/nbproject/project.properties
+++ b/workspaces/nbproject/project.properties
@@ -28,7 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.qc_json.jar=/Users/jacksonrkj/NetBeansProjects/workspaces/qc_json.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,8 +42,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.workspacesLib.jar}:\
-    ${file.reference.qc_json.jar}
+    ${reference.workspacesLib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -73,7 +71,7 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.workspacesLib=../../workspaces/workspacesLib
+project.workspacesLib=../workspacesLib
 reference.workspacesLib.jar=${project.workspacesLib}/dist/workspacesLib.jar
 resource.dir=setup
 run.test.classpath=\
